unpackaged/main/default/objects/Policy_Implementation__c/Policy_Implementation__c.object-meta.xml
<CustomObject>
    <description>Policy Services Policy Implementations</description>
    <label>Policy Implementation</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Policy Implementation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Implementations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>