unpackaged/main/default/objects/Policy_Implementation__c/fields/Accident__c.field-meta.xml
<CustomField>
    <fullName>Accident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>Accident</label>
    <type>Checkbox</type>
</CustomField>