unpackaged/main/default/objects/Policy_Implementation__c/fields/Accident_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Accident_Recovery__c</fullName>
    <defaultValue>&quot;•   Plan Type:  &quot; +   BR()+                                                                                  
&quot;      o    24 hour / off the job &quot; +  BR()+                                                          
&quot;•  Packages Offered:   &quot; + BR()   +                                                   
&quot;      o Basic / Select / Ultra   &quot; + BR() +                                              
&quot;•  AD&amp;D Rider Amount:  &quot; + BR() +                                                             
&quot;      o $50k / $100k&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Accident Recovery</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>