unpackaged/main/default/objects/Policy_Implementation__c/fields/Add_Class__c.field-meta.xml
<CustomField>
    <fullName>Add_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is Adding a Class</description>
    <label>Add Class</label>
    <type>Checkbox</type>
</CustomField>