unpackaged/main/default/objects/Policy_Implementation__c/fields/Add_Remove_Benefit_Rider__c.field-meta.xml
<CustomField>
    <fullName>Add_Remove_Benefit_Rider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is adding or removing benefit rider</description>
    <label>Add/Remove Benefit Rider</label>
    <type>Checkbox</type>
</CustomField>