unpackaged/main/default/objects/Policy_Implementation__c/fields/Add_Remove_Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>Add_Remove_Bill_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is adding or removing a bill group</description>
    <label>Add/Remove Bill Group</label>
    <type>Checkbox</type>
</CustomField>