unpackaged/main/default/objects/Policy_Implementation__c/fields/Add_Remove_Department__c.field-meta.xml
<CustomField>
    <fullName>Add_Remove_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is adding or removing department</description>
    <label>Add/Remove Department</label>
    <type>Checkbox</type>
</CustomField>