unpackaged/main/default/objects/Policy_Implementation__c/fields/Add_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Add_Subsidiary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is Adding a Subsidary</description>
    <label>Add Subsidiary</label>
    <type>Checkbox</type>
</CustomField>