unpackaged/main/default/objects/Policy_Implementation__c/fields/Amend_Bill_Group_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Amend_Bill_Group_Complexity__c</fullName>
    <description>Amendment Bill Group Complexity</description>
    <formula>IF ( Number_of_Bill_Groups__c &gt; 1, Number_of_Bill_Groups__c * 0.5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amendment Bill Group Complexity</inlineHelpText>
    <label>Amend Bill Group Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>