unpackaged/main/default/objects/Policy_Implementation__c/fields/Amendment_Class_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Class_Complexity__c</fullName>
    <description>Calculated Complexity value of number of classes for amendment</description>
    <formula>IF ( (Amendment_Number_of_Classes__c &gt; 1),0.5 * (Amendment_Number_of_Classes__c - 1),0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Class Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>