unpackaged/main/default/objects/Policy_Implementation__c/fields/Amendment_Dept_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Dept_Complexity__c</fullName>
    <description>Calculation for Amendment Depart complexity</description>
    <formula>IF ( (Number_of_Departments__c &gt; 1),0.5 * (Number_of_Departments__c - 1),0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Dept Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>