unpackaged/main/default/objects/Policy_Implementation__c/fields/Amendment_Number_of_Classes__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Number_of_Classes__c</fullName>
    <description>Amendment Number of change Classes</description>
    <label>Amendment Number of Classes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>