unpackaged/main/default/objects/Policy_Implementation__c/fields/Amendment_Number_of_Payers__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Number_of_Payers__c</fullName>
    <description>Amendment Number of Payer</description>
    <label>Amendment Number of Payers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>