unpackaged/main/default/objects/Policy_Implementation__c/fields/Amendment_Payer_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Payer_Complexity__c</fullName>
    <description>Amendment Number of Payers Complexity</description>
    <formula>IF ( (Amendment_Number_of_Payers__c &gt; 1),0.5 * (Amendment_Number_of_Payers__c - 1),0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Payer Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>