unpackaged/main/default/objects/Policy_Implementation__c/fields/Annual_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Annual_Earnings__c</fullName>
    <description>This field shows the status of Annual Earnings and contains the information of Gate2</description>
    <label>Annual Earnings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>