unpackaged/main/default/objects/Policy_Implementation__c/fields/Annual_Earnings_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Earnings_Date__c</fullName>
    <description>This field contains the date against Annual Earnings field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Earnings Date</label>
    <type>DateTime</type>
</CustomField>