unpackaged/main/default/objects/Policy_Implementation__c/fields/Appointment_Verified__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Verified__c</fullName>
    <description>This field shows the status of Appointment Verified and contains the information of Gate1</description>
    <label>Appointment Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>