unpackaged/main/default/objects/Policy_Implementation__c/fields/Appointment_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Verified_Date__c</fullName>
    <description>This field contains Gate1 information.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Verified Date</label>
    <type>Date</type>
</CustomField>