unpackaged/main/default/objects/Policy_Implementation__c/fields/Approve_Members_Jet_Issue__c.field-meta.xml
<CustomField>
    <fullName>Approve_Members_Jet_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Approve members that meet Jet Issue Guidelines</inlineHelpText>
    <label>Approve Members/Jet Issue</label>
    <type>TextArea</type>
</CustomField>