unpackaged/main/default/objects/Policy_Implementation__c/fields/Approve_Members_Jet_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Approve_Members_Jet_Issue_Date__c</fullName>
    <description>This field contains the date when the member is approve</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approve Members/Jet Issue Date</label>
    <type>DateTime</type>
</CustomField>