unpackaged/main/default/objects/Policy_Implementation__c/fields/ASO__c.field-meta.xml
<CustomField>
    <fullName>ASO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASO</label>
    <type>Checkbox</type>
</CustomField>