unpackaged/main/default/objects/Policy_Implementation__c/fields/ATP__c.field-meta.xml
<CustomField>
    <fullName>ATP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATP</label>
    <type>Checkbox</type>
</CustomField>