unpackaged/main/default/objects/Policy_Implementation__c/fields/Benefit_Downgrade__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Downgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is a benefit downgrade</description>
    <label>Benefit Downgrade</label>
    <type>Checkbox</type>
</CustomField>