unpackaged/main/default/objects/Policy_Implementation__c/fields/Benefit_Termination__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes benefit termination</description>
    <label>Benefit Termination</label>
    <type>Checkbox</type>
</CustomField>