unpackaged/main/default/objects/Policy_Implementation__c/fields/Benefit_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes benefit upgrade</description>
    <label>Benefit Upgrade</label>
    <type>Checkbox</type>
</CustomField>