unpackaged/main/default/objects/Policy_Implementation__c/fields/BenefitFocus__c.field-meta.xml
<CustomField>
    <fullName>BenefitFocus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Benefit Focus Billing</description>
    <label>BenefitFocus</label>
    <type>Checkbox</type>
</CustomField>