unpackaged/main/default/objects/Policy_Implementation__c/fields/Bill_Group_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Complexity__c</fullName>
    <formula>IF ( (Number_of_Bill_Groups__c &gt; 1),2.00 * (Number_of_Bill_Groups__c - 1),0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Group Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>