unpackaged/main/default/objects/Policy_Implementation__c/fields/Cancer_Care_w_Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Care_w_Critical_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>Cancer Care w/ Critical Care</label>
    <type>Checkbox</type>
</CustomField>