unpackaged/main/default/objects/Policy_Implementation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>This field acting as Parent of New Business Workspace.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>New_Business_Workspaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>