unpackaged/main/default/objects/Policy_Implementation__c/fields/CDF__c.field-meta.xml
<CustomField>
    <fullName>CDF__c</fullName>
    <description>This field shows the status of Class Descriptions and contains information</description>
    <inlineHelpText>his field shows the status of Class Descriptions</inlineHelpText>
    <label>CDF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>