unpackaged/main/default/objects/Policy_Implementation__c/fields/Census_Enrollment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_Enrollment_Received_Date__c</fullName>
    <description>This field contains Gate1 information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Census Enrollment Received Date</label>
    <type>DateTime</type>
</CustomField>