unpackaged/main/default/objects/Policy_Implementation__c/fields/Census_KEY__c.field-meta.xml
<CustomField>
    <fullName>Census_KEY__c</fullName>
    <defaultValue>&quot; Green - Approve Pending Coverage &quot; + BR() + 
&quot; Red - Leave Pending Coverage &quot; + BR() +
&quot; Blue - Split Pending Coverage &quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Census KEY</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>