unpackaged/main/default/objects/Policy_Implementation__c/fields/Change_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Anniversary_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment is Changing Anniversary Date</description>
    <label>Change Anniversary Date</label>
    <type>Checkbox</type>
</CustomField>