unpackaged/main/default/objects/Policy_Implementation__c/fields/Change_Annual_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Annual_Enrollment_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amenmdment Changes Annual Enrollment Date</description>
    <label>Change Annual Enrollment Date</label>
    <type>Checkbox</type>
</CustomField>