unpackaged/main/default/objects/Policy_Implementation__c/fields/Change_Billing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Change_Billing_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment Includes Billing Mode Change</description>
    <label>Change Billing Mode</label>
    <type>Checkbox</type>
</CustomField>