unpackaged/main/default/objects/Policy_Implementation__c/fields/Change_Class_Definition__c.field-meta.xml
<CustomField>
    <fullName>Change_Class_Definition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment Changes Class Definition</description>
    <label>Change Class Definition</label>
    <type>Checkbox</type>
</CustomField>