unpackaged/main/default/objects/Policy_Implementation__c/fields/Change_Offsets_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Change_Offsets_Exclusions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment changes offsets or exclusions</description>
    <label>Change Offsets/Exclusions</label>
    <type>Checkbox</type>
</CustomField>