unpackaged/main/default/objects/Policy_Implementation__c/fields/Check_Billing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Check_Billing_Mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Check Billing Mode for other than monthly</inlineHelpText>
    <label>Check Billing Mode</label>
    <type>TextArea</type>
</CustomField>