unpackaged/main/default/objects/Policy_Implementation__c/fields/Check_Billing_Mode_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Billing_Mode_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Billing Mode Date</label>
    <type>DateTime</type>
</CustomField>