unpackaged/main/default/objects/Policy_Implementation__c/fields/Check_DRMS_Rate_Run__c.field-meta.xml
<CustomField>
    <fullName>Check_DRMS_Rate_Run__c</fullName>
    <description>This field ensure rates match, pull DRMS Rate Sheet and verify
benefit riders. If Group has prior carrier, verify we have the
prior carrier policy at this time</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rates match, pull DRMS Rate Sheet and verify
benefit riders. If Group has prior carrier, verify we have the
prior carrier policy at this time</inlineHelpText>
    <label>Check DRMS Rate Run</label>
    <type>TextArea</type>
</CustomField>