unpackaged/main/default/objects/Policy_Implementation__c/fields/Check_DRMS_Rate_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_DRMS_Rate_Run_Date__c</fullName>
    <description>This field track date against DRMS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Check DRMS Rate Run Date</label>
    <type>DateTime</type>
</CustomField>