unpackaged/main/default/objects/Policy_Implementation__c/fields/Checklist_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Completion_Date__c</fullName>
    <description>This field contains the date of Checklist Completion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Checklist Completion Date</label>
    <type>DateTime</type>
</CustomField>