unpackaged/main/default/objects/Policy_Implementation__c/fields/Checklist_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Percent_Complete__c</fullName>
    <formula>(17- Checklist_Status__c) /17</formula>
    <label>Checklist % Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>