unpackaged/main/default/objects/Policy_Implementation__c/fields/Claims_Setup__c.field-meta.xml
<CustomField>
    <fullName>Claims_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims Setup</label>
    <type>Checkbox</type>
</CustomField>