unpackaged/main/default/objects/Policy_Implementation__c/fields/Class_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Class_Descriptions__c</fullName>
    <description>This field shows the status of Class Descriptions and contains information of Gate 2</description>
    <label>Class Descriptions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>