unpackaged/main/default/objects/Policy_Implementation__c/fields/Class_Descriptions_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Descriptions_Date__c</fullName>
    <description>This field contains the date against Class Descriptions  field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Descriptions Date</label>
    <type>DateTime</type>
</CustomField>