unpackaged/main/default/objects/Policy_Implementation__c/fields/Clean_Submission__c.field-meta.xml
<CustomField>
    <fullName>Clean_Submission__c</fullName>
    <label>Clean Submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_Yes</valueSetName>
    </valueSet>
</CustomField>