unpackaged/main/default/objects/Policy_Implementation__c/fields/Combined_Bill__c.field-meta.xml
<CustomField>
    <fullName>Combined_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combined Bill</label>
    <type>Checkbox</type>
</CustomField>