unpackaged/main/default/objects/Policy_Implementation__c/fields/Commissions_Worksheet_Received__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Worksheet_Received__c</fullName>
    <description>This field shows status of Commissions Worksheet Received and contains information of Gate1</description>
    <label>Commissions Worksheet Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>