unpackaged/main/default/objects/Policy_Implementation__c/fields/Commissions_Worksheet_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Worksheet_Received_Date__c</fullName>
    <description>This field contains Gate1 information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commissions Worksheet Received Date</label>
    <type>DateTime</type>
</CustomField>