unpackaged/main/default/objects/Policy_Implementation__c/fields/Completion_Status_Target__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status_Target__c</fullName>
    <formula>63</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>