unpackaged/main/default/objects/Policy_Implementation__c/fields/Contract_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Contract_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>Contract Conversion</label>
    <type>Checkbox</type>
</CustomField>