unpackaged/main/default/objects/Policy_Implementation__c/fields/Contribution_Change__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment Changes Contribution</description>
    <label>Contribution Change</label>
    <type>Checkbox</type>
</CustomField>