unpackaged/main/default/objects/Policy_Implementation__c/fields/Contributory_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Contributory_Percentage__c</fullName>
    <description>This field shows status of Contributory Percentage and contains information of Gate2</description>
    <label>Contributory Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>