unpackaged/main/default/objects/Policy_Implementation__c/fields/Contributory_Percentage_Date__c.field-meta.xml
<CustomField>
    <fullName>Contributory_Percentage_Date__c</fullName>
    <description>This field contains the date against Contributory Percentage  field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contributory Percentage Date</label>
    <type>DateTime</type>
</CustomField>