unpackaged/main/default/objects/Policy_Implementation__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>