unpackaged/main/default/objects/Policy_Implementation__c/fields/Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Critical_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>Critical Care</label>
    <type>Checkbox</type>
</CustomField>