unpackaged/main/default/objects/Policy_Implementation__c/fields/Critical_Census_Data__c.field-meta.xml
<CustomField>
    <fullName>Critical_Census_Data__c</fullName>
    <description>This field shows Critical Census Data.</description>
    <inlineHelpText>Name, DOB and SSN</inlineHelpText>
    <label>Critical Census Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>