unpackaged/main/default/objects/Policy_Implementation__c/fields/Critical_Census_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Critical_Census_Data_Date__c</fullName>
    <description>This field contains the date against Critical Census Data.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Critical Census Data Date</label>
    <type>DateTime</type>
</CustomField>