unpackaged/main/default/objects/Policy_Implementation__c/fields/Critical_Illness__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness__c</fullName>
    <defaultValue>&quot;•      EE Plan and GI&quot;  + BR() +
&quot;     o      5 – 50K; 20K GI&quot; + BR () +
&quot;•      SP Plan and GI&quot; + BR() +
&quot;     o      5 – 50K; 10K GI&quot; + BR() +
&quot;•	CH Plan and GI&quot; + BR() +
&quot;     o      5 or 10K; 10K GI&quot; + BR() +
&quot;•      Riders Included:&quot; + BR() +
&quot;     o      Recurrent Rider&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Critical Illness</label>
    <length>1600</length>
    <type>LongTextArea</type>
</CustomField>