unpackaged/main/default/objects/Policy_Implementation__c/fields/Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire__c</fullName>
    <description>This field shows status of  Date of Hire and contains information of Gate2</description>
    <label>Date of Hire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>