unpackaged/main/default/objects/Policy_Implementation__c/fields/Date_of_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire_Date__c</fullName>
    <description>This field contains the date against Date of Hire field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Hire Date</label>
    <type>DateTime</type>
</CustomField>