unpackaged/main/default/objects/Policy_Implementation__c/fields/Dep_Life__c.field-meta.xml
<CustomField>
    <fullName>Dep_Life__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dependent life</description>
    <inlineHelpText>Does group have Dependent Life</inlineHelpText>
    <label>Dep Life</label>
    <type>Checkbox</type>
</CustomField>