unpackaged/main/default/objects/Policy_Implementation__c/fields/DI_Flag__c.field-meta.xml
<CustomField>
    <fullName>DI_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains Triaging person information</description>
    <label>DI Flag</label>
    <type>Checkbox</type>
</CustomField>