unpackaged/main/default/objects/Policy_Implementation__c/fields/Docs_Sent_to_Docfinity__c.field-meta.xml
<CustomField>
    <fullName>Docs_Sent_to_Docfinity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Add docs to OIT and move Outlook Folder to U: Drive</inlineHelpText>
    <label>Docs Sent to Docfinity</label>
    <type>TextArea</type>
</CustomField>