unpackaged/main/default/objects/Policy_Implementation__c/fields/Docs_Sent_to_Docfinity_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Sent_to_Docfinity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Docs Sent to Docfinity Date</label>
    <type>DateTime</type>
</CustomField>