unpackaged/main/default/objects/Policy_Implementation__c/fields/Domestic_Partner_Change__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Partner_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes domestic partner changes</description>
    <label>Domestic Partner Change</label>
    <type>Checkbox</type>
</CustomField>