unpackaged/main/default/objects/Policy_Implementation__c/fields/DRMS_Submission__c.field-meta.xml
<CustomField>
    <fullName>DRMS_Submission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Prepare DRMS coversheet and LTD
Policy/Cert/Roster/prior carrier policy/
proposal/DRMS rate run sheet to send to PE</inlineHelpText>
    <label>DRMS Submission</label>
    <type>TextArea</type>
</CustomField>