unpackaged/main/default/objects/Policy_Implementation__c/fields/DRMS_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>DRMS_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DRMS Submission Date</label>
    <type>DateTime</type>
</CustomField>