unpackaged/main/default/objects/Policy_Implementation__c/fields/DUO_Accident__c.field-meta.xml
<CustomField>
    <fullName>DUO_Accident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUO Accident</label>
    <type>Checkbox</type>
</CustomField>