unpackaged/main/default/objects/Policy_Implementation__c/fields/DUO_Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>DUO_Critical_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUO Critical Care</label>
    <type>Checkbox</type>
</CustomField>