unpackaged/main/default/objects/Policy_Implementation__c/fields/DUO_Hospital__c.field-meta.xml
<CustomField>
    <fullName>DUO_Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUO Hospital</label>
    <type>Checkbox</type>
</CustomField>