unpackaged/main/default/objects/Policy_Implementation__c/fields/EAP_Change__c.field-meta.xml
<CustomField>
    <fullName>EAP_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment changes EAP</description>
    <label>EAP Change</label>
    <type>Checkbox</type>
</CustomField>